<resources>
    <string name="app_name">GuriHouses</string>
    <string name="welcome_to_gurihouses">WELCOME TO GURIHOUSES</string>
    <string name="please_login_to_your_user_account">Please login to your user account</string>
    <string name="enter_your_number">ENTER YOUR NUMBER</string>
    <string name="get_otp">Get OTP</string>
    <string name="skip_login">Skip login</string>
    <string name="sign_up">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="mobile">MOBILE</string>
    <string name="email_op">EMAIL (OPTIONAL)</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et felis vel quis quis sem. Rutrum habitant eu pellentesque at tellus ut etiam. Ac nulla euismod fames turpis nullam. Tempus vel ut vel non. Massa at risus, aliquam in interdum nec. Fusce turpis risus nullam dolor maecenas sit rhoncus.</string>
    <string name="contact_us">Contact us</string>
    <string name="send_your_inqury">Send your inqury</string>
    <string name="our_team_will_get_in_touch_with_you_shortly">Our team will get in touch with you shortly</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="email_address">Email address</string>
    <string name="your_number">Your Number</string>
    <string name="your_message">Enter your message</string>
    <string name="submit">Submit</string>
    <string name="quick_links">Quick Links</string>
    <string name="mail_us">Mail Us</string>
    <string name="call_us">Call Us</string>
    <string name="faq">FAQ</string>
    <string name="notification_title">Explore new properties</string>
    <string name="notification_description">Explore newly added propoerties in your are and get your self a comtable experince</string>
    <string name="notification">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="about">About GuriHouses</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy">Privacy policy</string>
    <string name="about_gurihomes">About GuriHomes</string>
    <string name="verify_code">Verify code</string>
    <string name="a_code_has_been_sent">A code has been sent to</string>
    <string name="change_picture">Change picture</string>
    <string name="name">Name:</string>
    <string name="mobile_">Mobile:</string>
    <string name="gender_">Gender:</string>
    <string name="male">Male</string>
    <string name="update_profile">Update Profile</string>
    <string name="btb_post_property">Post property</string>
    <string name="btn_edit_property">Edit this property</string>
    <string name="btn_delete_property">Delete this property</string>

    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="cancel">Cancel</string>


    <string-array name="listing_type">
        <item>Rent</item>
        <item>Sale</item>

    </string-array>
</resources>