<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibribold"
            android:gravity="center_horizontal"
            android:text="@string/lbl_take_camera_picture"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tv_select_gallry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibribold"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_choose_from_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibribold"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>
</LinearLayout>