<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".contactus.ui.activities.ContactUsActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_blue"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/contact_us"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@+id/ic_back"
                    app:layout_constraintBottom_toBottomOf="@id/ic_back"
                    app:layout_constraintStart_toEndOf="@+id/ic_back"/>

          <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/constrant_form"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_const_layout"
              android:layout_marginEnd="@dimen/_24sdp"
              android:layout_marginTop="@dimen/_24sdp"
              app:layout_constraintStart_toStartOf="@id/ic_back"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/ic_back">

              <TextView
                  android:id="@+id/send_enquiry"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:layout_marginTop="@dimen/_16sdp"
                  android:text="@string/send_your_inqury"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>

              <TextView
                  android:id="@+id/description"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:textColor="@color/black"
                  android:text="@string/our_team_will_get_in_touch_with_you_shortly"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/send_enquiry"/>

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/name"
                  android:layout_width="0dp"
                  android:layout_height="@dimen/_35sdp"
                  android:layout_marginTop="@dimen/_12sdp"
                  android:layout_marginEnd="@dimen/_20sdp"
                  android:hint="@string/your_name"
                  android:textColor="@color/black"
                  android:paddingStart="@dimen/_4sdp"
                  android:textSize="@dimen/_10ssp"
                  android:background="@drawable/bg_edit_text"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@+id/description" />

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/email"
                  android:layout_width="0dp"
                  android:layout_height="@dimen/_35sdp"
                  android:layout_marginTop="@dimen/_12sdp"
                  android:layout_marginEnd="@dimen/_20sdp"
                  android:hint="@string/email_address"
                  android:paddingStart="@dimen/_4sdp"
                  android:textSize="@dimen/_10ssp"
                  android:textColor="@color/black"
                  android:background="@drawable/bg_edit_text"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@+id/name" />

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/number"
                  android:layout_width="0dp"
                  android:layout_height="@dimen/_35sdp"
                  android:layout_marginTop="@dimen/_12sdp"
                  android:layout_marginEnd="@dimen/_20sdp"
                  android:hint="@string/your_number"
                  android:textSize="@dimen/_10ssp"
                  android:textColor="@color/black"
                  android:paddingStart="@dimen/_4sdp"
                  android:background="@drawable/bg_edit_text"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@+id/email" />

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/message"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_12sdp"
                  android:layout_marginEnd="@dimen/_20sdp"
                  android:minHeight="@dimen/_90sdp"
                  android:hint="@string/your_message"
                  android:textColor="@color/black"
                  android:paddingStart="@dimen/_4sdp"
                  android:paddingTop="@dimen/_4sdp"
                  android:textSize="@dimen/_10ssp"
                  android:gravity="start"
                  android:background="@drawable/bg_edit_text"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@+id/number" />

              <androidx.appcompat.widget.AppCompatButton
                  android:layout_width="@dimen/_120sdp"
                  android:layout_height="wrap_content"
                  android:text="@string/submit"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:layout_marginTop="@dimen/_24sdp"
                  android:layout_marginBottom="@dimen/_24sdp"
                  android:background="@drawable/bg_btn_blue"
                  app:layout_constraintTop_toBottomOf="@+id/message"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="@+id/message"
                  app:layout_constraintEnd_toEndOf="@+id/message"/>

          </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/quick_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:text="@string/quick_links"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/constrant_form"
                    app:layout_constraintTop_toBottomOf="@+id/constrant_form"/>



                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_call"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/icon_call"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintStart_toStartOf="@+id/quick_link"
                    app:layout_constraintTop_toBottomOf="@+id/quick_link"/>

                <TextView
                    android:id="@+id/text_call_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/call_us"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/ic_call"
                    app:layout_constraintEnd_toEndOf="@+id/ic_call"
                    app:layout_constraintTop_toBottomOf="@+id/ic_call"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_email"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/ic_email"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    app:layout_constraintStart_toEndOf="@+id/ic_call"
                    app:layout_constraintTop_toBottomOf="@+id/quick_link"/>

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/mail_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="@+id/ic_email"
                    app:layout_constraintEnd_toEndOf="@+id/ic_email"
                    app:layout_constraintTop_toBottomOf="@+id/ic_call"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>