<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myprofile.ui.MyProfileActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <include
                android:id="@+id/inl_detail_toolbar"
                layout="@layout/chat_toolbar_layout" />

            <ImageView
                android:id="@+id/ic_user"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inl_detail_toolbar" />

            <TextView
                android:id="@+id/change_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/ic_user"
                app:layout_constraintStart_toStartOf="@+id/ic_user"
                android:text="@string/change_picture"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_change_pro"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/change_pic"
                app:layout_constraintTop_toTopOf="@+id/change_pic"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/change_pic"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/name"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_name"
                app:layout_constraintBottom_toBottomOf="@+id/text_name"
                app:layout_constraintTop_toTopOf="@+id/text_name" />
            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/email_"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_email"
                app:layout_constraintBottom_toBottomOf="@+id/text_email"
                app:layout_constraintTop_toTopOf="@+id/text_email" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_email"/>

            <TextView
                android:id="@+id/text_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/mobile_"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_mobile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_mobile"
                app:layout_constraintBottom_toBottomOf="@+id/text_mobile"
                app:layout_constraintTop_toTopOf="@+id/text_mobile" />


            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_mobile"/>


            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/gender_"/>

            <AutoCompleteTextView
                android:id="@+id/gender_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/male"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintStart_toEndOf="@id/text_gender"
                app:layout_constraintTop_toTopOf="@id/text_gender"
                app:layout_constraintBottom_toBottomOf="@+id/text_gender"
                android:focusable="false"
                android:textSize="16sp"
                android:inputType="text"
                android:textCursorDrawable="@color/black"
                android:drawableEnd="@drawable/ic_spinner" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/update_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_tv" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>